[gd_scene load_steps=34 format=3 uid="uid://cnstv1n7bxwyl"]

[ext_resource type="Script" uid="uid://dxrmuhpdk3w6d" path="res://scripts/player/player.gd" id="1_qlg0r"]
[ext_resource type="Texture2D" uid="uid://cnmxy7xub4nsl" path="res://assets/shadow.png" id="2_smehm"]
[ext_resource type="SpriteFrames" uid="uid://dwl30igdsyner" path="res://scenes/players/player_sprite.tres" id="3_4ni07"]
[ext_resource type="Script" uid="uid://bfpcbyan210qv" path="res://scripts/player/animation_state.gd" id="3_dqkch"]
[ext_resource type="Script" uid="uid://crn6yr3bg6db5" path="res://scripts/player/state_machine_master.gd" id="3_tuyoq"]
[ext_resource type="Script" uid="uid://b1xrxs3r25mft" path="res://scripts/player/animation_movement/idle.gd" id="7_ur7pv"]
[ext_resource type="Script" uid="uid://bc2cowbif14go" path="res://scripts/player/animation_movement/walk.gd" id="8_y4r1p"]
[ext_resource type="Script" uid="uid://ch7cnym18hv1y" path="res://scripts/player/animation_movement/dash.gd" id="9_d2wvv"]
[ext_resource type="Script" uid="uid://crisrhou7thfs" path="res://scripts/player/hurtbox.gd" id="10_31cv2"]
[ext_resource type="Script" uid="uid://cks0j4owlcqrk" path="res://scripts/player/health.gd" id="10_ke2ow"]
[ext_resource type="Script" uid="uid://bcq71p2g2vwqg" path="res://scripts/player/hitbox.gd" id="10_ujl30"]
[ext_resource type="Script" uid="uid://cimodr5tm58tt" path="res://scripts/player/animation_movement/attack.gd" id="14_f1ej7"]
[ext_resource type="Script" uid="uid://u1gi0a8pnifa" path="res://scripts/player/dash_state/dash_state.gd" id="15_oprun"]
[ext_resource type="Script" uid="uid://dsm8u5dvawy6k" path="res://scripts/player/dash_state/dash_ready.gd" id="16_a8ls1"]
[ext_resource type="Script" uid="uid://ccj14i2d1q8ur" path="res://scripts/player/animation_movement/skill.gd" id="16_i4ail"]
[ext_resource type="Script" uid="uid://d3w55h0pw8d5f" path="res://scripts/player/animation_movement/disabled.gd" id="16_l71n6"]
[ext_resource type="Script" uid="uid://crlpeb43n0lxd" path="res://scripts/player/dash_state/second_dash_ready.gd" id="17_qfm1y"]
[ext_resource type="Script" uid="uid://bxrxnu1rjwdyu" path="res://scripts/player/dash_state/dash_cooldown.gd" id="18_fulsm"]
[ext_resource type="Script" uid="uid://c6taevav321k" path="res://scripts/player/animation_movement/death.gd" id="21_dt7fs"]
[ext_resource type="Script" uid="uid://l5ae7fad6lve" path="res://scripts/player/skill_state/skill_state.gd" id="21_i4ail"]
[ext_resource type="Script" uid="uid://b8whwgrsl3fea" path="res://scripts/player/skill_state/skill_ready.gd" id="22_4ni07"]
[ext_resource type="PackedScene" uid="uid://c8crbsghfwpdq" path="res://scenes/players/player1/projectiles/fire.tscn" id="23_ke2ow"]
[ext_resource type="Script" uid="uid://b0ejhiixb6cgn" path="res://scripts/player/skill_state/skill_cooldown.gd" id="23_l71n6"]
[ext_resource type="Script" uid="uid://brk0xs2bd26q1" path="res://scripts/player/animation_movement/hurt.gd" id="23_wnwbv"]
[ext_resource type="Script" uid="uid://cx7gfb4qhmgr6" path="res://scripts/hp_bar.gd" id="25_ke2ow"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fjrip"]
radius = 8.0
height = 26.0

[sub_resource type="CircleShape2D" id="CircleShape2D_fulsm"]
radius = 6.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_31cv2"]
radius = 4.0
height = 16.0

[sub_resource type="Animation" id="Animation_60mlk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Hitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Hitbox/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(5, -5)]
}

[sub_resource type="Animation" id="Animation_4r5pv"]
resource_name = "attack1"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Hitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Hitbox/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(11, -6), Vector2(5, -5), Vector2(2, -5), Vector2(19, -8), Vector2(19, -8), Vector2(10, -7)]
}

[sub_resource type="Animation" id="Animation_i4ail"]
resource_name = "attack2"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Hitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Hitbox/CollisionShape2D:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.25, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(11, -6), Vector2(2, -13), Vector2(-1, -20), Vector2(14, -17), Vector2(19, -8), Vector2(19, -8), Vector2(10, -7)]
}

[sub_resource type="Animation" id="Animation_fulsm"]
resource_name = "attack3"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Hitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Hitbox/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(11, -6), Vector2(5, -5), Vector2(2, -5), Vector2(19, -8), Vector2(19, -8), Vector2(10, -7)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i4ail"]
_data = {
&"RESET": SubResource("Animation_60mlk"),
&"attack1": SubResource("Animation_4r5pv"),
&"attack2": SubResource("Animation_i4ail"),
&"attack3": SubResource("Animation_fulsm")
}

[node name="Player" type="CharacterBody2D"]
texture_filter = 1
motion_mode = 1
script = ExtResource("1_qlg0r")

[node name="Body" type="Node2D" parent="."]
position = Vector2(2, 11)

[node name="Shadow" type="Sprite2D" parent="Body"]
position = Vector2(-2.38419e-07, 0)
scale = Vector2(0.35, 0.175)
texture = ExtResource("2_smehm")
offset = Vector2(-9.3, 0)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Body"]
position = Vector2(-18, -42)
sprite_frames = ExtResource("3_4ni07")
animation = &"attack3"
frame = 5
frame_progress = 1.0
centered = false

[node name="Hurtbox" type="Area2D" parent="Body"]
collision_layer = 2
collision_mask = 0
script = ExtResource("10_31cv2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/Hurtbox"]
position = Vector2(-2, -14)
shape = SubResource("CapsuleShape2D_fjrip")
debug_color = Color(1, 0, 0, 0.419608)

[node name="Hitbox" type="Area2D" parent="Body"]
position = Vector2(0, -3)
collision_layer = 0
collision_mask = 4
script = ExtResource("10_ujl30")
attack_damage = 30.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/Hitbox"]
position = Vector2(5, -5)
shape = SubResource("CircleShape2D_fulsm")
disabled = true
debug_color = Color(0, 1, 0, 0.419608)

[node name="FiringPosition" type="Marker2D" parent="Body"]
position = Vector2(11, -9)

[node name="GroundCollision" type="CollisionShape2D" parent="."]
position = Vector2(2, 11)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_31cv2")

[node name="SwordHitboxAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_i4ail")
}

[node name="Health" type="Node" parent="." node_paths=PackedStringArray("hurtbox")]
script = ExtResource("10_ke2ow")
hurtbox = NodePath("../Body/Hurtbox")
max_health = 100.0

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_tuyoq")

[node name="AnimationState" type="Node" parent="StateMachine" node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_dqkch")
initial_state = NodePath("idle")

[node name="idle" type="Node" parent="StateMachine/AnimationState" node_paths=PackedStringArray("anim_sprite", "character_body", "player", "dash_state", "skill_state", "hurtbox")]
script = ExtResource("7_ur7pv")
anim_sprite = NodePath("../../../Body/AnimatedSprite2D")
character_body = NodePath("../../..")
player = NodePath("../../..")
dash_state = NodePath("../../DashState")
skill_state = NodePath("../../SkillState")
hurtbox = NodePath("../../../Body/Hurtbox")

[node name="walk" type="Node" parent="StateMachine/AnimationState" node_paths=PackedStringArray("anim_sprite", "character_body", "player", "dash_state", "skill_state", "hurtbox")]
script = ExtResource("8_y4r1p")
anim_sprite = NodePath("../../../Body/AnimatedSprite2D")
character_body = NodePath("../../../Body")
player = NodePath("../../..")
walk_speed = 300
dash_state = NodePath("../../DashState")
skill_state = NodePath("../../SkillState")
hurtbox = NodePath("../../../Body/Hurtbox")

[node name="dash" type="Node" parent="StateMachine/AnimationState" node_paths=PackedStringArray("anim_sprite", "character_body", "player", "hurtbox_collision")]
script = ExtResource("9_d2wvv")
anim_sprite = NodePath("../../../Body/AnimatedSprite2D")
character_body = NodePath("../../../Body")
player = NodePath("../../..")
hurtbox_collision = NodePath("../../../Body/Hurtbox/CollisionShape2D")
dash_speed = 900
dash_duration = 0.2

[node name="jump" type="Node" parent="StateMachine/AnimationState"]

[node name="attack" type="Node" parent="StateMachine/AnimationState" node_paths=PackedStringArray("anim_sprite", "player", "dash_state", "sword_animation", "character_body", "hurtbox")]
script = ExtResource("14_f1ej7")
anim_sprite = NodePath("../../../Body/AnimatedSprite2D")
player = NodePath("../../..")
dash_state = NodePath("../../DashState")
sword_animation = NodePath("../../../SwordHitboxAnimation")
character_body = NodePath("../../../Body")
hurtbox = NodePath("../../../Body/Hurtbox")

[node name="skill" type="Node" parent="StateMachine/AnimationState" node_paths=PackedStringArray("anim_sprite", "character_body", "player", "skill_state", "hurtbox")]
script = ExtResource("16_i4ail")
anim_sprite = NodePath("../../../Body/AnimatedSprite2D")
character_body = NodePath("../../..")
player = NodePath("../../..")
skill_state = NodePath("../../SkillState")
hurtbox = NodePath("../../../Body/Hurtbox")

[node name="death" type="Node" parent="StateMachine/AnimationState" node_paths=PackedStringArray("anim_sprite", "player", "shadow", "hp_bar")]
script = ExtResource("21_dt7fs")
anim_sprite = NodePath("../../../Body/AnimatedSprite2D")
player = NodePath("../../..")
shadow = NodePath("../../../Body/Shadow")
hp_bar = NodePath("../../../hp_bar")

[node name="hurt" type="Node" parent="StateMachine/AnimationState" node_paths=PackedStringArray("anim_sprite", "player")]
script = ExtResource("23_wnwbv")
anim_sprite = NodePath("../../../Body/AnimatedSprite2D")
player = NodePath("../../..")

[node name="disabled" type="Node" parent="StateMachine/AnimationState" node_paths=PackedStringArray("anim_sprite", "player")]
script = ExtResource("16_l71n6")
anim_sprite = NodePath("../../../Body/AnimatedSprite2D")
player = NodePath("../../..")

[node name="DashState" type="Node" parent="StateMachine" node_paths=PackedStringArray("initial_state")]
script = ExtResource("15_oprun")
initial_state = NodePath("dash_ready")

[node name="dash_ready" type="Node" parent="StateMachine/DashState"]
script = ExtResource("16_a8ls1")

[node name="second_dash_ready" type="Node" parent="StateMachine/DashState" node_paths=PackedStringArray("anim_player", "dash_anim_state")]
script = ExtResource("17_qfm1y")
anim_player = NodePath("../../../Body/AnimatedSprite2D")
second_dash_window_time = 1.0
dash_anim_state = NodePath("../../AnimationState/dash")

[node name="dash_cooldown" type="Node" parent="StateMachine/DashState"]
script = ExtResource("18_fulsm")
dash_cooldown = 2.0

[node name="SkillState" type="Node" parent="StateMachine" node_paths=PackedStringArray("initial_state")]
script = ExtResource("21_i4ail")
initial_state = NodePath("skill_ready")

[node name="skill_ready" type="Node" parent="StateMachine/SkillState" node_paths=PackedStringArray("firing_position", "character_body")]
script = ExtResource("22_4ni07")
projectile_scene = ExtResource("23_ke2ow")
firing_position = NodePath("../../../Body/FiringPosition")
character_body = NodePath("../../../Body")

[node name="skill_cooldown" type="Node" parent="StateMachine/SkillState"]
script = ExtResource("23_l71n6")
skill_cooldown = 5.0

[node name="Camera2D" type="Camera2D" parent="."]

[node name="hp_bar" type="Node2D" parent="." node_paths=PackedStringArray("player", "health")]
position = Vector2(0, -21)
script = ExtResource("25_ke2ow")
player = NodePath("..")
health = NodePath("../Health")

[node name="full2" type="ColorRect" parent="hp_bar"]
offset_left = -10.0
offset_top = -5.0
offset_right = 11.0
offset_bottom = 4.0
color = Color(0.601223, 0.601223, 0.601223, 1)

[node name="left" type="Node2D" parent="hp_bar"]
position = Vector2(-10, 0)

[node name="left" type="ColorRect" parent="hp_bar/left"]
offset_top = -5.0
offset_right = 21.0
offset_bottom = 4.0
color = Color(0, 1, 0, 1)
